Wed Jul 15 17:44:47 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktext.c (new_text_property): We free things from
	the text property MemChunk, so it needs to be G_ALLOC_AND_FREE.

	* Fix up line start cache when splitting a property
	during an insert.

1998-07-20  Raph Levien  <raph@acm.org>

	* gdk/gdkrgb.c: More cleanups in the config process.

1998-07-20  Raph Levien  <raph@acm.org>

	* gdkrgb.c: Fixed minor config bug preventing big-endian
	architectures from working.

Tue Jul 21 06:32:43 1998  Stefan Jeske  <stefan@gtk.org>

	* gtk/gtkprogressbar.{c,h} gtk/testgtk.c: Fixed wrong size of
 	activity indicator. It is settable now as a fraction of the
	total width/height using gtk_progress_bar_set_activity_blocks.
	Renamed gtk_progress_bar_set_number_of_blocks to
	gtk_progress_bar_set_discrete_blocks.

Mon Jul 20 21:28:18 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.c (gtk_ctree_post_recursive_to_depth)
 	(gtk_ctree_pre_recursive_to_depth): new functions, recursive process
	tree to specified depth
	(gtk_ctree_expand_to_depth): expand tree to specified depth
 	(gtk_ctree_collapse_to_depth): collapse all nodes with level >= depth

Sun Jul 19 23:51:05 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (scroll_vertical): fix for vertical scrolling in case
	of GTK_CLIST_ADD_MOD
	* gtk/testgtk.c (add1000_clist): changed pixmap

Sat Jul 18 22:59:04 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.h: 
	* gtk/gtkmain.c: export gtk_binary_age and gtk_interface_age.

	* gtk/gtktypeutils.h:
	* gtk/gtkitemfactory.h: remove "void" from prototypes again.

Sat Jul 18 00:54:01 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtknotebook.c (gtk_notebook_set_child_arg): added support for
  	CHILD_ARG_MENU_LABEL, CHILD_ARG_TAB_LABEL
	(gtk_notebook_get_child_arg): added support for CHILD_ARG_MENU_LABEL,
	CHILD_ARG_POSITION
	(gtk_notebook_reorder_child): new funktion to change position of a
	notebook page
	(gtk_notebook_draw_arrow): draw left/right arrow with